--- a/mousemove/style.css
+++ b/mousemove/style.css
@@ -3,13 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html,body{
+    height: 100%;
+    width: 100%;
+}
 #center{
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 300px;
-    width: 400px;
-    border: 1px solid rgb(255, 0, 0);
     transform: translate(-50%, -50%);
+    width: 400px;
+    height: 200px;
+    border: 1px solid black;
 }
